individual video naming

--- a/templates/add_multiple.html
+++ b/templates/add_multiple.html
@@ -55,6 +55,11 @@
             <label for="playlist_name">Playlist Name:</label>
             <input type="text" name="playlist_name" id="playlist_name" placeholder="Enter playlist name (optional)">
             
+            <label for="apply_to_videos">
+                <input type="checkbox" name="apply_to_videos" id="apply_to_videos" checked>
+                Apply playlist name to videos
+            </label>
+            
             <label for="description">Description (applies to all videos):</label>
             <textarea name="description" id="description" placeholder="Enter description"></textarea>
             
