extract an mp3 from an mp4 because why not

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
                 <a href="{{ url_for('playlists') }}">Playlists</a>
                 <a href="{{ url_for('add_multiple_videos') }}">Add Multiple</a>
+                <a href="{{ url_for('extract_mp3') }}">Extract MP3</a>
             </div>
         </div>
     </nav>
