--- a/templates/video_detail.html
+++ b/templates/video_detail.html
@@ -29,7 +29,7 @@
             <section class="video-player">
                 <h2>Video Player</h2>
                 <div class="video-container">
-                    <video id="main-video" controls>
+                    <video id="main-video" controls loop>
                         <source src="{{ url_for('stream_video', video_id=video.id) }}" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
