tag detail page

--- a/templates/index.html
+++ b/templates/index.html
@@ -268,7 +268,7 @@
         }
 
         function filterByTag(tag) {
-            window.location.href = `/filter?tag=${encodeURIComponent(tag)}`;
+            window.location.href = `/tag/${encodeURIComponent(tag)}`;
         }
 
         function displayTags(videoId, tags) {
