--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,10 @@ input[type="text"], textarea {
     font-family: 'Roboto', Arial, sans-serif;
 }
 
+button, .button {
+    font-size: 14px;
+}
+
 textarea {
     height: 100px;
     resize: vertical;
