comment/profile functionality

--- a/templates/playlist_detail.html
+++ b/templates/playlist_detail.html
@@ -99,7 +99,7 @@
                 {% for comment in comments %}
                     <div class="comment">
                         <div class="comment-header">
-                            <strong class="comment-author">{{ comment.author }}</strong>
+                            <strong class="comment-author"><a href="{{ url_for('author_profile', slug=comment.author|slugify) }}">{{ comment.author }}</a></strong>
                             <span class="comment-timestamp">{{ comment.timestamp.strftime("%m/%d/%Y %I:%M %p") }}</span>
                             <button class="delete-comment-btn" onclick="deletePlaylistComment({{ comment.id }})">×</button>
                         </div>
@@ -346,7 +346,7 @@
                     newComment.className = 'comment';
                     newComment.innerHTML = `
                         <div class="comment-header">
-                            <strong class="comment-author">${data.comment.author}</strong>
+                            <strong class="comment-author"><a href="/author/${data.comment.author_slug}">${data.comment.author}</a></strong>
                             <span class="comment-timestamp">${data.comment.timestamp}</span>
                         </div>
                         <div class="comment-content">${data.comment.content}</div>
